# KracKer

./: CMakeLists.txt  README.md  install.sh
include/: cracker.h  hash.h
src/: cracker.cpp  hash.cpp  main.cpp
